tests/neg/classes/class-06.ts

class Foo<A> { 
	public g;
  constructor(x: A) { this.g = x; }
}

var a = new Foo(1);

assert(a.g === 2);
